--- a/styles/main.css
+++ b/styles/main.css
@@ -300,20 +300,13 @@ input {
     display: inline-block
 }
 
-.page-wrapper {
-    min-height: 100%;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column
-}
+
 
 body {
     font-family: ProximaNova
 }
 
-.mobile-br, .second-screen-mobile {
-    display: none
-}
+
 
 h1 {
     text-align: center;
@@ -323,9 +316,17 @@ h1 {
     color: #fff;
 }
 
+.second-screen-mobile {
+    display: none
+}
+
 .page-wrapper {
     position: relative;
     background-color: #020202;
+    min-height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column
 }
 
 .page-wrapper .first-screen {
@@ -490,6 +491,32 @@ h1 {
     }
 }
 
+@media (max-width: 350px) {
+    .page-wrapper h1 {
+        font-size: 25px;
+        line-height: 35px;
+        font-weight: 600;
+    }
+    .page-wrapper .second-screen-bg-1 img, .page-wrapper .second-screen-bg-2 img {
+        width: 320px;
+        height: 390px
+    }
+}
+
+@media (max-width: 375px) {
+    .page-wrapper .second-screen-bg-1 img, .page-wrapper .second-screen-bg-2 img {
+        width: 355px;
+        height: 400px
+    }
+    .page-wrapper .second-screen-bg-2 {
+        margin-top: 360px;
+        margin-bottom: 10px
+    }
+    .page-wrapper .first-screen-content__download-block .left-side {
+        left: 5px
+    }
+}
+
 @media (min-width: 376px) and (max-width: 799px) {
     .page-wrapper .first-screen {
         background-image: url(../images/first-screen-bg-ia.png);
@@ -509,6 +536,81 @@ h1 {
 @media (min-width: 800px) {
     .container {
         max-width: 800px
+    }
+}
+
+@media (max-width: 799px) {
+    .container {
+        max-width: 520px
+    }
+    .page-wrapper h1 {
+        font-size: 30px;
+        line-height: 41px;
+        font-weight: 600;
+        text-align: center
+    }
+    .page-wrapper .first-screen-content {
+        padding-left: 0
+    }
+    .page-wrapper .first-screen-content__title {
+        padding-left: 5px
+    }
+    .page-wrapper .first-screen-content__logo img {
+        width: 120px;
+        height: 60px;
+    }
+    .page-wrapper .first-screen-content__description {
+        font-size: 20px;
+        line-height: 24px;
+        font-weight: 300;
+        margin-bottom: 55px
+    }
+    .page-wrapper .first-screen-content__logo {
+        padding-left: 45px;
+        margin-top: 28px;
+        margin-bottom: 368px
+    }
+    .page-wrapper .first-screen-content__download-block {
+        margin-bottom: 40px;
+        display: flex;
+        flex-direction: column;
+        width: 100%
+    }
+    .page-wrapper .first-screen-content__download-block .left-side {
+        position: relative;
+        width: 314px;
+        font-size: 15px;
+        line-height: 18px;
+        font-weight: 400;
+        padding: 0;
+        margin: 0 auto;
+        border-right: none !important
+    }
+    .page-wrapper .first-screen-content__download-block .left-side:before {
+        content: url(../images/line.png);
+        margin: auto;
+        position: absolute;
+        top: -38px;
+        left: 15px
+    }
+    .page-wrapper .first-screen-content__download-block .right-side {
+        margin-top: 8px;
+        text-align: center;
+        margin-left: 0;
+        padding-right: 0
+    }
+    .page-wrapper .first-screen-content__download-block, .page-wrapper .first-screen-content__download-block, .page-wrapper .first-screen-content__download-block {
+        display: none
+    }
+    .page-wrapper .second-screen-content__title {
+        text-align: center;
+        margin-top: 45px;
+        margin-bottom: 0
+    }
+    .page-wrapper .second-screen-content__title .second-text {
+        font-size: 35px;
+        line-height: 50px;
+        font-weight: 900
     }
 }
 
@@ -650,107 +752,5 @@ h1 {
         line-height: 22px;
         font-weight: 700;
         padding-left: 0
-    }
-}
-
-@media (max-width: 799px) {
-    .container {
-        max-width: 520px
-    }
-    .page-wrapper h1 {
-        font-size: 30px;
-        line-height: 41px;
-        font-weight: 600;
-        text-align: center
-    }
-    .page-wrapper .first-screen-content {
-        padding-left: 0
-    }
-    .page-wrapper .first-screen-content__title {
-        padding-left: 5px
-    }
-    .page-wrapper .first-screen-content__logo img {
-        width: 120px;
-        height: 60px;
-    }
-    .page-wrapper .first-screen-content__description {
-        font-size: 20px;
-        line-height: 24px;
-        font-weight: 300;
-        margin-bottom: 55px
-    }
-    .page-wrapper .first-screen-content__logo {
-        padding-left: 45px;
-        margin-top: 28px;
-        margin-bottom: 368px
-    }
-    .page-wrapper .first-screen-content__download-block {
-        margin-bottom: 40px;
-        display: flex;
-        flex-direction: column;
-        width: 100%
-    }
-    .page-wrapper .first-screen-content__download-block .left-side {
-        position: relative;
-        width: 314px;
-        font-size: 15px;
-        line-height: 18px;
-        font-weight: 400;
-        padding: 0;
-        margin: 0 auto;
-        border-right: none !important
-    }
-    .page-wrapper .first-screen-content__download-block .left-side:before {
-        content: url(../images/line.png);
-        margin: auto;
-        position: absolute;
-        top: -38px;
-        left: 15px
-    }
-    .page-wrapper .first-screen-content__download-block .right-side {
-        margin-top: 8px;
-        text-align: center;
-        margin-left: 0;
-        padding-right: 0
-    }
-    .page-wrapper .first-screen-content__download-block, .page-wrapper .first-screen-content__download-block, .page-wrapper .first-screen-content__download-block {
-        display: none
-    }
-    .page-wrapper .second-screen-content__title {
-        text-align: center;
-        margin-top: 45px;
-        margin-bottom: 0
-    }
-    .page-wrapper .second-screen-content__title .second-text {
-        font-size: 35px;
-        line-height: 50px;
-        font-weight: 900
-    }
-}
-
-
-@media (max-width: 375px) {
-    .page-wrapper .second-screen-bg-1 img, .page-wrapper .second-screen-bg-2 img {
-        width: 355px;
-        height: 400px
-    }
-    .page-wrapper .second-screen-bg-2 {
-        margin-top: 360px;
-        margin-bottom: 10px
-    }
-    .page-wrapper .first-screen-content__download-block .left-side {
-        left: 5px
-    }
-}
-
-@media (max-width: 350px) {
-    .page-wrapper h1 {
-        font-size: 25px;
-        line-height: 35px;
-        font-weight: 600;
-    }
-    .page-wrapper .second-screen-bg-1 img, .page-wrapper .second-screen-bg-2 img {
-        width: 320px;
-        height: 390px
     }
 }
