--- a/styles/index.css
+++ b/styles/index.css
@@ -274,12 +274,6 @@ a, a:focus, button, button:focus {
     font-style: normal
 }
 
-.container {
-    width: 100%;
-    padding: 0;
-    margin: 0 auto
-}
-
 body, html {
     height: 100%
 }
@@ -300,49 +294,34 @@ input {
     display: inline-block
 }
 
-
-
 body {
     font-family: ProximaNova
-}
-
-
-
-h1 {
-    text-align: center;
-    font-size: 40px;
-    line-height: 72px;
-    font-weight: 600;
-    color: #fff;
 }
 
 .second-screen-mobile {
     display: none
 }
 
+.container {
+    width: 100%;
+    padding: 0;
+    margin: 0 auto;
+    max-width: 520px;
+}
 .page-wrapper {
     position: relative;
     background-color: #020202;
-    min-height: 100%;
     overflow: hidden;
     display: flex;
-    flex-direction: column
+    flex-direction: column;
 }
-
-.page-wrapper .first-screen {
-    background-image: url(../images/first-screen-bg-ia.png);
-    background-repeat: no-repeat;
-    background-size: auto;
-    background-size: cover;
-    background-position: 50%;
-    height: 100vh
+.page-wrapper h1 {
+    font-size: 25px;
+    line-height: 35px;
+    font-weight: 600;
+    text-align: center;
+    color: #fff;
 }
-
-.page-wrapper .first-screen-content {
-    padding-left: 25px;
-    margin-bottom: 60px;
-}
-
 .page-wrapper .redirect-btn {
     background-color: #3a79ee;
     border-color: #3a79ee;
@@ -361,18 +340,34 @@ h1 {
     text-transform: uppercase;
     padding: 0 20px;
 }
-
 .page-wrapper .button-block {
     display: flex;
     justify-content: center;
     margin: 0 15px;
 }
-
-.page-wrapper .first-screen-content__logo {
-    margin-top: 50px;
-    margin-bottom: 470px
+.page-wrapper .first-screen {
+    background-image: url(../images/first-screen-bg-800-ia.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50%;
+    height: auto;
 }
-
+.page-wrapper .first-screen-content {
+    padding-left: 0;
+    margin-bottom: 60px;
+}
+.page-wrapper .first-screen-content__logo {
+    padding-left: 15px;
+    margin-top: 15px;
+    margin-bottom: 235px;
+}
+.page-wrapper .first-screen-content__logo img {
+    width: 120px;
+    height: 60px;
+}
+.page-wrapper .first-screen-content__title {
+    padding-left: 5px
+}
 .page-wrapper .first-screen-content__description {
     font-size: 35px;
     line-height: 42px;
@@ -381,372 +376,194 @@ h1 {
     text-align: center;
     margin-bottom: 62px
 }
-
 .page-wrapper .first-screen-content__download-block {
-    display: flex;
-    width: 100%;
+    display: none;
     color: #fff;
-    font-size: 20px;
-    line-height: 26px;
+    font-size: 16px;
+    line-height: 19px;
     font-weight: 400;
-
 }
-
 .page-wrapper .first-screen-content__download-block .left-side {
     width: 50%;
     padding: 15px 90px 15px 0;
     border-right: 1px solid #6f6f6f;
 }
-
 .page-wrapper .first-screen-content__download-block .right-side {
     width: 50%;
     padding: 15px 0 15px 90px;
 }
-
 .page-wrapper .second-screen-desktop {
-    background-image: url(../images/second-screen-bg-ia.png);
+    display: none;
+    background-image: url(../images/second-screen-bg-800-ia.png);
     background-repeat: no-repeat;
     background-position: 50%;
     background-size: auto;
-    background-position: 51% 100%;
 }
-
 .page-wrapper .second-screen-content__title {
     text-align: center;
-    margin-top: 40px;
-    margin-bottom: 745px
+    margin-top: 45px;
+    margin-bottom: 0;
 }
-
 .page-wrapper .second-screen-content__title .first-text {
-    font-size: 30px;
-    line-height: 29px;
+    font-size: 20px;
+    line-height: 22px;
     font-weight: 700;
     color: #fff;
-    padding-left: 20px
+    padding-left: 20px;
 }
-
 .page-wrapper .second-screen-footer .second-screen-footer__text-block {
     padding: 15px;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 29px;
     font-weight: 700;
     color: #fff;
     text-align: center;
 }
-
+.page-wrapper .second-screen-mobile {
+    display: block;
+    position: relative;
+}
+.page-wrapper .second-screen-mobile img {
+    width: 320px;
+    height: 390px;
+}
+.page-wrapper .second-screen-mobile .second-screen-bg-1 {
+    position: absolute;
+    height: 400px;
+    top: 45px;
+    right: 0;
+}
+.page-wrapper .second-screen-mobile .second-screen-bg-2 {
+    position: relative;
+    height: 400px;
+    top: 0;
+    left: 0;
+    margin-top: 400px;
+}
 .page-wrapper .page-footer {
     background: #050608;
     text-align: center;
     position: relative;
     z-index: 2
 }
-
-@media (min-width: 320px) and (max-width: 375px) {
-    .page-wrapper .first-screen {
-        background-image: url(../images/first-screen-bg-800-ia.png);
-        background-repeat: no-repeat;
-        background-size: auto;
-        background-size: cover;
-        background-position: 50%
+@media only screen and (min-width: 400px) {
+    .page-wrapper .second-screen-mobile .second-screen-bg-2 {
+        height: 460px;
+        margin-top: 460px;
     }
-
-
-}
-
-@media (min-width: 320px) and (max-width: 799px) {
-    .page-wrapper .second-screen-desktop {
-        display: none
-    }
-
-    .page-wrapper .second-screen-mobile {
-        display: block;
-        background: #050608;
-        position: relative
-    }
-
-    .page-wrapper .second-screen-footer .second-screen-footer__text-block {
-        padding-top: 0;
-        font-size: 18px;
-    }
-
-    .page-wrapper .second-screen-bg-1 {
-        position: absolute;
-        height: 400px;
-        top: 45px;
-        right: 0;
-        margin-bottom: 32px
-    }
-
-    .page-wrapper .second-screen-bg-2 {
-        position: relative;
-        height: 450px;
-        top: 0;
-        left: 0;
-        margin-top: 431px;
-        margin-bottom: 25px
+    .page-wrapper .second-screen-mobile img {
+        width: auto;
+        height: auto;
     }
 }
 
-@media (max-width: 350px) {
-    .page-wrapper h1 {
-        font-size: 25px;
-        line-height: 35px;
-        font-weight: 600;
-    }
-    .page-wrapper .second-screen-bg-1 img, .page-wrapper .second-screen-bg-2 img {
-        width: 320px;
-        height: 390px
-    }
-}
-
-@media (max-width: 375px) {
-    .page-wrapper .second-screen-bg-1 img, .page-wrapper .second-screen-bg-2 img {
-        width: 355px;
-        height: 400px
-    }
-    .page-wrapper .second-screen-bg-2 {
-        margin-top: 360px;
-        margin-bottom: 10px
-    }
-    .page-wrapper .first-screen-content__download-block .left-side {
-        left: 5px
-    }
-}
-
-@media (min-width: 376px) and (max-width: 799px) {
-    .page-wrapper .first-screen {
-        background-image: url(../images/first-screen-bg-ia.png);
-        background-repeat: no-repeat;
-        background-size: auto;
-        background-size: cover;
-        background-position: 50%
-    }
-
-    .page-wrapper .first-screen-content__logo {
-        padding-left: 15px !important;
-        margin-top: 14px !important;
-        margin-bottom: 425px !important
-    }
-}
-
-@media (min-width: 800px) {
+@media only screen and (min-width: 768px) {
     .container {
-        max-width: 800px
+        max-width: 800px;
     }
-}
-
-@media (max-width: 799px) {
-    .container {
-        max-width: 520px
+    .page-wrapper {
+        min-height: 100%;
     }
     .page-wrapper h1 {
         font-size: 30px;
         line-height: 41px;
-        font-weight: 600;
-        text-align: center
+    }
+    .page-wrapper .first-screen{
+        background-image: url(../images/first-screen-bg-800-ia.png);
     }
     .page-wrapper .first-screen-content {
-        padding-left: 0
-    }
-    .page-wrapper .first-screen-content__title {
-        padding-left: 5px
-    }
-    .page-wrapper .first-screen-content__logo img {
-        width: 120px;
-        height: 60px;
-    }
-    .page-wrapper .first-screen-content__description {
-        font-size: 20px;
-        line-height: 24px;
-        font-weight: 300;
-        margin-bottom: 55px
+        padding-left: 25px;
+        margin-bottom: 60px;
     }
     .page-wrapper .first-screen-content__logo {
         padding-left: 45px;
         margin-top: 28px;
-        margin-bottom: 368px
+        margin-bottom: 368px;
     }
-    .page-wrapper .first-screen-content__download-block {
-        margin-bottom: 40px;
-        display: flex;
-        flex-direction: column;
-        width: 100%
+    .page-wrapper .first-screen-content__logo img {
+        width: 175px;
+        height: 85px;
     }
-    .page-wrapper .first-screen-content__download-block .left-side {
-        position: relative;
-        width: 314px;
-        font-size: 15px;
-        line-height: 18px;
-        font-weight: 400;
-        padding: 0;
-        margin: 0 auto;
-        border-right: none !important
-    }
-    .page-wrapper .first-screen-content__download-block .left-side:before {
-        content: url(../images/line.png);
-        margin: auto;
-        position: absolute;
-        top: -38px;
-        left: 15px
-    }
-    .page-wrapper .first-screen-content__download-block .right-side {
-        margin-top: 8px;
-        text-align: center;
-        margin-left: 0;
-        padding-right: 0
-    }
-    .page-wrapper .first-screen-content__download-block, .page-wrapper .first-screen-content__download-block, .page-wrapper .first-screen-content__download-block {
-        display: none
-    }
-    .page-wrapper .second-screen-content__title {
-        text-align: center;
-        margin-top: 45px;
-        margin-bottom: 0
-    }
-    .page-wrapper .second-screen-content__title .second-text {
-        font-size: 35px;
-        line-height: 50px;
-        font-weight: 900
-    }
-}
-
-@media (min-width: 800px) and (max-width: 1919px) {
-    .page-wrapper h1 {
-        font-size: 40px;
-        line-height: 54px;
-        font-weight: 600;
-        text-align: center
-    }
-
     .page-wrapper .first-screen-content__title {
-        margin-bottom: 5px
+        margin-bottom: 5px;
     }
-
-    .page-wrapper .first-screen-content__logo {
-        padding-left: 10px;
-        margin-top: 36px;
-        margin-bottom: 425px
-    }
-
-    .page-wrapper .first-screen-content__logo img {
-        width: 175px;
-        height: 85px;
-    }
-
-    .page-wrapper .first-screen-content__description {
-        font-size: 26px;
-        line-height: 31px;
-        font-weight: 300;
-        margin-bottom: 34px
-    }
-
     .page-wrapper .first-screen-content__download-block {
-        font-size: 16px;
-        line-height: 19px;
-        font-weight: 400;
+       display: flex;
     }
-
-    .page-wrapper .first-screen-content__download-block .left-side {
-        padding: 19px 55px 15px 132px;
-    }
-
-    .page-wrapper .first-screen-content .right-side {
-        padding: 19px 132px 15px 55px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .container {
-        max-width: 1000px
-    }
-}
-
-@media (min-width: 1367px) and (max-width: 1919px) {
-    .page-wrapper .first-screen {
-        height: 100vh
-    }
-
-    .page-wrapper .first-screen-content__logo {
-        margin-bottom: 400px
-    }
-}
-
-@media (max-width: 1366px) {
-    .page-wrapper .first-screen {
-        height: auto
-    }
-
-    .page-wrapper h1 {
-        font-size: 40px;
-        line-height: 54px;
-        font-weight: 600;
-        text-align: center
-    }
-
-    .page-wrapper .second-screen-desktop {
-        background-image: url(../images/second-screen-bg-1200-ia.png);
-        background-repeat: no-repeat;
-        background-position: 50%;
-        background-size: auto;
-        background-position: 57% 100%
-    }
-
-    .page-wrapper .second-screen-content__title {
-        text-align: center;
-        margin-top: 52px;
-        margin-bottom: 510px
-    }
-
-    .page-wrapper .second-screen-content__title .first-text {
-        font-size: 25px;
-        line-height: 28px;
-        font-weight: 700;
-        padding-left: 0
-    }
-}
-
-@media (max-width: 1199px) {
-    .page-wrapper .first-screen {
-        height: auto
-    }
-
-    .page-wrapper .first-screen-content__logo {
-        padding-left: 45px;
-        margin-top: 28px;
-        margin-bottom: 368px
-    }
-
-    .page-wrapper .first-screen-content__logo img {
-        width: 175px;
-        height: 85px;
-    }
-
     .page-wrapper .first-screen-content__download-block .left-side {
         padding: 23px 55px 10px 30px;
     }
-
     .page-wrapper .first-screen-content .right-side {
         padding: 23px 30px 10px 55px;
     }
-
-    .page-wrapper .second-screen-desktop {
-        background-image: url(../images/second-screen-bg-800-ia.png);
-        background-repeat: no-repeat;
-        background-position: 50%;
-        background-size: auto;
-        background-position: 57% 100%
+    .page-wrapper .second-screen-mobile {
+        display: none;
     }
-
+    .page-wrapper .second-screen-desktop {
+        display: block;
+        background-size: auto;
+        background-position: 50% 100%;
+    }
     .page-wrapper .second-screen-content__title {
         text-align: center;
         margin-top: 20px;
-        margin-bottom: 550px
+        margin-bottom: 550px;
     }
-
     .page-wrapper .second-screen-content__title .first-text {
+        padding-left: 0;
+    }
+    .page-wrapper .second-screen-footer .second-screen-footer__text-block {
         font-size: 20px;
-        line-height: 22px;
-        font-weight: 700;
-        padding-left: 0
+    }
+}
+@media only screen and (min-width: 1200px) {
+    .container {
+        max-width: 1000px;
+    }
+    .page-wrapper {
+        min-height: 100%;
+    }
+    .page-wrapper h1 {
+        font-size: 40px;
+        line-height: 54px;
+    }
+    .page-wrapper .first-screen{
+        background-image: url(../images/first-screen-bg-ia.png);
+        height: 100vh;
+    }
+    .page-wrapper .first-screen-content {
+        padding-left: 25px;
+        margin-bottom: 60px;
+    }
+    .page-wrapper .first-screen-content__logo {
+        padding-left: 10px;
+        margin-top: 36px;
+        margin-bottom: 400px;
+    }
+    .page-wrapper .first-screen-content__logo img {
+        width: 175px;
+        height: 85px;
+    }
+    .page-wrapper .first-screen-content__download-block {
+        display: flex;
+        font-size: 20px;
+        line-height: 26px;
+    }
+    .page-wrapper .first-screen-content__download-block .left-side {
+        padding: 19px 55px 15px 132px;    }
+    .page-wrapper .first-screen-content .right-side {
+        padding: 19px 132px 15px 55px;
+    }
+    .page-wrapper .second-screen-desktop {
+        background-image: url(../images/second-screen-bg-ia.png);
+    }
+    .page-wrapper .second-screen-content__title {
+        margin-top: 40px;
+        margin-bottom: 745px;
+    }
+    .page-wrapper .second-screen-content__title .first-text {
+        font-size: 30px;
+        line-height: 29px;
+        padding-left: 20px;
     }
 }
