--- a/styles/index.css
+++ b/styles/index.css
@@ -229,6 +229,10 @@ html {
     position: relative;
     z-index: 2
 }
+.hidden {
+    visibility: hidden;
+    position: absolute;
+}
 @media only screen and (min-width: 400px) {
     .page-wrapper .second-screen-mobile .second-screen-bg-2 {
         height: 460px;
