--- a/styles/index.css
+++ b/styles/index.css
@@ -129,14 +129,14 @@ html {
     margin: 0 15px;
 }
 .page-wrapper .first-screen {
-    background-image: url(../images/first-screen-bg-800-ia.png);
+    background-image: url(../images/first-screen-bg-800-ia.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50%;
     height: auto;
 }
 .page-wrapper .first-screen-error{
-    background-image: url(../images/404.png);
+    background-image: url(../images/404.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 48%;
@@ -160,28 +160,24 @@ html {
     margin-bottom: 235px;
 }
 .page-wrapper .first-screen-content__logo-error {
-    margin-bottom: 180px;
+    margin-bottom: 160px;
 }
-.first-screen-content__button {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10vh;
-}
-.first-screen-content__button a{
-    width: 180px;
-    height: 40px;
-    border-radius: 40px;
-    font-size: 17px;
-    font-weight: bold;
-    padding-top: 4px;
+.first-screen-message__wrap {
     color: white;
-    border: none;
+    margin-bottom: 30vh;
+    text-align: center;
+    font-size: 20px;
+    padding: 0 10px;
+}
+
+.first-screen-message__wrap a {
+    display: block;
+    color: #3a79ee;
+    margin-top: 10px;
     cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #3a79ee;
-    text-transform: uppercase;
+}
+.first-screen-message__wrap a:hover {
+    text-decoration: underline;
 }
 .page-wrapper .first-screen-content__logo img {
     width: 120px;
@@ -216,7 +212,7 @@ html {
 }
 .page-wrapper .second-screen-desktop {
     display: none;
-    background-image: url(../images/second-screen-bg-800-ia.png);
+    background-image: url(../images/second-screen-bg-800-ia.webp);
     background-repeat: no-repeat;
     background-position: 50%;
     background-size: auto;
@@ -276,23 +272,21 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px;
+    padding: 20px 10px 15px;
 }
 .accordion_button {
-    width: 180px;
-    height: 40px;
     border-radius: 40px;
-    font-size: 17px;
+    font-size: 18px;
     font-weight: bold;
-    padding-top: 4px;
     color: white;
-    border: none;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #3a79ee;
-    text-transform: uppercase;
+}
+
+.accordion_button:hover {
+    text-decoration: underline;
 }
 
 .accordion {
@@ -314,6 +308,9 @@ html {
         width: auto;
         height: auto;
     }
+    .first-screen-message__wrap {
+        font-size: 22px;
+    }
 }
 @media only screen and (min-width: 768px) {
     .container {
@@ -327,7 +324,7 @@ html {
         line-height: 41px;
     }
     .page-wrapper .first-screen{
-        background-image: url(../images/first-screen-bg-800-ia.png);
+        background-image: url(../images/first-screen-bg-800-ia.webp);
     }
     .page-wrapper .first-screen-content {
         padding-left: 25px;
@@ -342,7 +339,7 @@ html {
         margin-bottom: 368px;
     }
     .page-wrapper .first-screen-content__logo-error {
-        margin-bottom: 200px;
+        margin-bottom: 175px;
     }
     .page-wrapper .first-screen-content__logo img {
         width: 175px;
@@ -379,10 +376,8 @@ html {
     .page-wrapper .second-screen-footer .second-screen-footer__text-block {
         font-size: 20px;
     }
-    .first-screen-content__button a{
-        width: 220px;
-        height: 50px;
-        font-size: 22px;
+    .first-screen-message__wrap {
+        font-size: 30px;
     }
 }
 @media only screen and (min-width: 1200px) {
@@ -397,7 +392,7 @@ html {
         line-height: 54px;
     }
     .page-wrapper .first-screen{
-        background-image: url(../images/first-screen-bg-ia.png);
+        background-image: url(../images/first-screen-bg-ia.webp);
         min-height: 100vh;
     }
     .page-wrapper .first-screen-content {
@@ -430,7 +425,7 @@ html {
         padding: 19px 132px 15px 55px;
     }
     .page-wrapper .second-screen-desktop {
-        background-image: url(../images/second-screen-bg-ia.png);
+        background-image: url(../images/second-screen-bg-ia.webp);
     }
     .page-wrapper .second-screen-content__title {
         margin-top: 40px;
